@@ -1,3 +1,6 @@
+#0,1,0,20210714
+	'bpy.utils.user_resource' issue fixed.
+
 #0,1,0,20210614
 	Selection set Copy/past issue fixed.
 	Selection set interface simplified.
